<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vickel.elderApp.HealthActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/bgimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSetDoctor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/ViewSchedule" />

        <Button
            android:id="@+id/btnSetDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSetMed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:text="@string/setDoctor" />

        <Button
            android:id="@+id/btnSetMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="94dp"
            android:text="@string/setMed" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
