<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vickel.elderApp.SetDoctorActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/bgimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="27dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="31dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etName"
            android:layout_marginTop="35dp"
            android:text="@string/Date" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/etName"
            android:layout_below="@+id/etName"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSubmit"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="52dp"
            android:text="@string/Location" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignEnd="@+id/etDate"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/etDate"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="17dp"
            android:text="@string/submit" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_above="@+id/etLocation"
            android:layout_alignStart="@+id/etDate"
            android:layout_marginBottom="78dp"
            android:layout_marginStart="18dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:text="00" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBaseline="@+id/editText5"
            android:layout_alignBottom="@+id/editText5"
            android:layout_toStartOf="@+id/btnSubmit"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:text="00" />

        <Button
            android:id="@+id/button4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_above="@+id/editText6"
            android:layout_alignEnd="@+id/editText5"
            android:layout_marginBottom="12dp"
            android:text="@string/plus" />

        <Button
            android:id="@+id/button5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignStart="@+id/editText5"
            android:layout_below="@+id/editText6"
            android:layout_marginTop="16dp"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignStart="@+id/editText6"
            android:layout_alignTop="@+id/button4"
            android:text="@string/plus" />

        <Button
            android:id="@+id/button7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/button5"
            android:layout_alignStart="@+id/editText6"
            android:text="@string/minus" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
