<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.priyanka.mapsdemo.SetMedActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/bgimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSetMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:text="@string/setMedAlarm" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkMonday"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp"
            android:entries="@array/frequence_arrays"
            android:prompt="@string/frequence" />

        <CheckBox
            android:id="@+id/checkMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSetMed"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="80dp"
            android:text="monday"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkMonday"
            android:layout_alignBottom="@+id/checkMonday"
            android:layout_toEndOf="@+id/checkMonday"
            android:text="Tuesday"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkTuesday"
            android:layout_alignBottom="@+id/checkTuesday"
            android:layout_toEndOf="@+id/checkTuesday"
            android:text="Wednesday"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkWednesday"
            android:layout_alignBottom="@+id/checkWednesday"
            android:layout_toEndOf="@+id/checkWednesday"
            android:text="Thursday"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkTuesday"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/checkTuesday"
            android:text="Friday"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/checkFriday"
            android:layout_toStartOf="@+id/checkWednesday"
            android:text="Saturday"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkSaturday"
            android:layout_alignBottom="@+id/checkSaturday"
            android:layout_toStartOf="@+id/checkThursday"
            android:text="Sunday"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etHour"
            android:maxLength="2"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnDecHour"
            android:layout_below="@+id/btnIncHour"
            android:ems="10"
            android:inputType="number"
            android:text="00"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etMin"
            android:maxLength="2"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnIncMin"
            android:layout_toEndOf="@+id/checkSunday"
            android:ems="10"
            android:inputType="number"
            android:text="00"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnIncHour"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/etHour"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:text="@string/plus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDecHour"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/etHour"
            android:layout_toStartOf="@+id/checkWednesday"
            android:text="@string/minus"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnIncMin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBaseline="@+id/btnIncHour"
            android:layout_alignBottom="@+id/btnIncHour"
            android:layout_alignStart="@+id/btnDecMin"
            android:text="@string/plus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDecMin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBaseline="@+id/btnDecHour"
            android:layout_alignBottom="@+id/btnDecHour"
            android:layout_alignStart="@+id/etMin"
            android:text="@string/minus"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinner"
            android:layout_centerHorizontal="true"
            android:text="@string/reminder"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDecHour"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/medicationName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/empty" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
